Fix JDK17 startup issue after CASSANDRA-17199; temporary workaround, to be reverted after CASSANDRA-18239 Patch by Ekaterina Dimitrova; reviewed by Michael Semb Wever for CASSANDRA-18431